dataset1235/2025-2/1153765216/users/2719941446/executions/2814675586_1319609354.log
== SUBMISSION (2025-08-26 18:46:57)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

print((n1+n2)/2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:42:21)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:44:24)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(round(media,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.2
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:43:09)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(round(media,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.2
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:46:47)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

print((n1+n2)/2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:08)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:42:39)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:46:48)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

print((n1+n2)/2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:44)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 // 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:44:06)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(round(media,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.2
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:43:41)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 1
print(round(media,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 10.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 19.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 18.8
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 15.0
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 16.2
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:04)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(media))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 5
    print(media))
                ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:42:21)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:28)
-- CODE: 
n1 = float(input("N REAL 1: "))
n2 = float(input("N REAL 2: "))

media = n1 + n2 // 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
N REAL 1: N REAL 2: 14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
N REAL 1: N REAL 2: 14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
N REAL 1: N REAL 2: 10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
N REAL 1: N REAL 2: 11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
N REAL 1: N REAL 2: 6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
